<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewMessage">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:title="@string/compose"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        />
    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/to"
        android:textColor="@color/gray"
        android:textSize="@dimen/default_text_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_toRightOf="@+id/to"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/to"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size"
        android:hint="@string/subject"/>

    <EditText
        android:id="@+id/compose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:hint="@string/compose_email"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size" />

    <CheckBox
        android:textSize="@dimen/default_text_size"
        android:layout_margin="@dimen/default_margin"
        android:layout_below="@id/compose"
        android:id="@+id/notify_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:textAppearance="?android:textAppearanceMedium" />
</RelativeLayout>