<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailedActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"
/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin">

        <TextView
            android:id="@+id/subject_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            tools:text="@string/random_text" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/min_image_size"
            android:layout_height="@dimen/min_image_size"
            android:layout_below="@+id/subject_text_view"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/autor_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subject_text_view"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_toRightOf="@+id/image_view"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_text_size"
            tools:text="@string/random_text" />

        <TextView
            android:id="@+id/content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/random_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/default_text_size" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/autor_text_view"
            android:layout_toRightOf="@+id/image_view"
            android:text="@string/random_text"
            android:textSize="@dimen/small_text_size" />

        <ImageView
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_reply"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_toLeftOf="@+id/text_forward"
            android:src="@drawable/baseline_reply_black_24dp" />

        <ImageView
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_forward"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:src="@drawable/baseline_forward_black_24dp" />

        <TextView
            android:id="@+id/text_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/small_margin"
            android:layout_toLeftOf="@+id/text_forward"
            android:text="@string/reply"
            android:textColor="@color/gray"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/text_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/forward"
            android:textColor="@color/gray"
            android:textSize="@dimen/small_text_size" />

    </RelativeLayout>
</LinearLayout>